2.1.0/_sources/gallery/userdemo/annotate_simple_coord01.rst.txt


.. _sphx_glr_gallery_userdemo_annotate_simple_coord01.py:


=======================
Annotate Simple Coord01
=======================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_simple_coord01_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt

    fig, ax = plt.subplots(figsize=(3, 2))
    an1 = ax.annotate("Test 1", xy=(0.5, 0.5), xycoords="data",
                      va="center", ha="center",
                      bbox=dict(boxstyle="round", fc="w"))
    an2 = ax.annotate("Test 2", xy=(1, 0.5), xycoords=an1,
                      xytext=(30, 0), textcoords="offset points",
                      va="center", ha="left",
                      bbox=dict(boxstyle="round", fc="w"),
                      arrowprops=dict(arrowstyle="->"))
    plt.show()

**Total running time of the script:** ( 0 minutes  0.017 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_simple_coord01.py <annotate_simple_coord01.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_simple_coord01.ipynb <annotate_simple_coord01.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
